@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*froxlor-0.9.12 (23 Aug 2010)
+
+  23 Aug 2010; Froxlor Release Team <release@froxlor.org>
+  -froxlor-0.9.11.ebuild, +froxlor-0.9.12.ebuild:
+  version bump, remove old
+
   09 Aug 2010; Froxlor Release Team <release@froxlor.org>
   froxlor-9999.ebuild, metadata.xml:
   add pureftpd support, fix disabling inserttask statement when bind useflag
